<resources>
    <string name="app_name" translatable="false">PrioritAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">List Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>

    <string name="element_text">placeholder</string>
    <string name="lblTitle">"Title"</string>
    <string name="lblText">Text</string>
    <string name="lblCategories">Categories</string>
    <string name="lblPriority">Priority</string>
    <string name="lblDate">est. Date</string>
    <string name="date" translatable="false">%1$02d-%2$02d-%3$02d</string>
    <string name="lblDone">Done</string>
</resources>
